<resources>
    <string name="app_name">Census</string>
    <string name="population_census">Population Census</string>
    <string name="select_role">Select role…</string>
    <string name="role">Role</string>
    <string name="admin">Admin</string>
    <string name="stationary">Stationary</string>
    <string name="controller">Controller</string>
    <string name="citizen">Citizen</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="createAnAccount">Create an account</string>
    <string name="alreadyHaveAnAccount">Already have an account</string>
    <string name="select_region">Select Region</string>
    <string name="token_verification">Token Verification</string>
    <string name="we_will_send_you_an_one_time_password_on_this_device">We will send you an One Time Password on this device</string>
    <string name="if_you_are_ready_click_button_in_below">If you are ready click button in below</string>
    <string name="get_code">Get code</string>
    <string name="enter_the_code_sent_to">Enter the code sent to</string>
    <string name="didn_t_receive_the_code">Didn\'t receive the code?</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="verify">Verify</string>
    <string name="_7">+7</string>
    <string name="_7776666666">7776666666</string>
    <string name="register_new_stationary">Register new Stationary</string>
    <string name="what_action_you_want_to_do">What action you want to do?</string>
    <string name="register_new_controller">Register new Controller</string>
    <string name="delete_stationary">Delete Stationary</string>
    <string name="delete_controller">Delete Controller</string>
    <string name="change_user_info">Change User Info</string>
    <string name="log_out">Log Out</string>
    <string name="view_user_info">View User Info</string>
    <string name="use_your_fingerprint_to_continue">Use your finger print to continue</string>
    <string name="verifyFinger">Verify</string>
    <string name="role_username">Role: username</string>
    <string name="list_of_citizens_who_passed_the_census">List of citizens who passed the census</string>
    <string name="no_one_has_conducted_a_population_census_yet">No one has conducted a population census yet</string>
    <string name="use_your_faceid_to_continue">Use your faceID to continue</string>
    <string name="change_data">Change Data</string>
    <string name="delete">Delete</string>
    <string name="click_to_name_that_you_want_to_delete">Click to name that you want to delete</string>
    <string name="there_is_no_any_stationary_or_controller">There is no any stationary or controller</string>
    <string name="go_to_view_admin_page">Go to View Admin Page</string>
    <string name="do_you_really_want_to_delete">Do you really want to delete?</string>
    <string name="id">Id</string>
    <string name="usernameWithDoubleDot">Username:</string>
    <string name="idWithDoubleDot">Id:</string>
    <string name="region">Region</string>
    <string name="regionWithDoubleDot">Region:</string>
    <string name="roleWithDoubleDot">Role:</string>
    <string name="click_to_name_that_you_want_to_change">Click to name that you want to change</string>
    <string name="change_some_data_to_update">Change some data to update</string>
    <string name="update">Update</string>
    <string name="old_password_with_double_dot">Old Password:</string>
    <string name="to_change_password_enter_old_password">To change password enter old password:</string>
    <string name="old_password">Old password</string>
    <string name="new_password_with_double_dot">New Password:</string>
    <string name="new_password">New Password</string>
    <string name="citizen_information_page">Citizen information page</string>
    <string name="full_name_with_double_dot">Full Name:</string>
    <string name="full_name">Full Name</string>
    <string name="tinWithDoubleDot">TIN:</string>
    <string name="tin">TIN</string>
    <string name="go_to_view_controller_page">Go to View Controller Page</string>
    <string name="if_you_are_ready_please_click_on_the_button_below_to_take_the_census">If you are ready, please click on the button below to take the census</string>
    <string name="start_an_online_interview">Start an online interview</string>
    <string name="online_interview_first_part">Online Interview First Part</string>
    <string name="go_to_the_next_part">Go to the Next Part</string>
    <string name="online_interview_second_part">Online Interview Second Part</string>
    <string name="question_body">Question Body</string>
    <string name="question_id_with_dot">Question ID.</string>
    <string name="question_head">Question Head</string>
    <string name="individual_identification_number">Individual Identification Number</string>
    <string name="enter_the_answer">enter the answer</string>
    <string name="online_interview_third_part">Online Interview Third Part</string>
    <string name="finish_online_interview">Finish online interview</string>
    <string name="citizen_info_field">Citizen Info Field:</string>
    <string name="citizen_info_field_answer">Citizen Info Field Answer</string>
    <string name="household_info">Household Info</string>
    <string name="citizen_information_change_page">Citizen Information Change Page</string>
    <string name="update_and_go_to_stationary_view_page">Update and Go To Stationary View Page</string>
    <string name="go_to_view_info_stationary_page">Go To View Info Stationary Page</string>

    <color name="main_color">#FFFFFF</color>
    <color name="second_main_color">#4CAF50</color>
    <color name="text_main_color">#FFFFFF</color>
    <color name="gray">#8C8C8C</color>
    <color name="blue">#3366CC</color>
    <color name="mtrl_textinput_default_box_stroke_color">#4CAF50</color>

    <dimen name="marginTop20dp">20dp</dimen>
    <dimen name="marginBottom20dp">20dp</dimen>
</resources>