<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:layout_gravity="center"
    tools:context=".interview.OnlineInterviewLoginPartActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:text="@string/online_interview_first_part"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/tinWithDoubleDot"
                android:textAllCaps="false"
                android:textColor="@color/second_main_color"
                android:textColorHint="@color/second_main_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/tin"
                android:textAllCaps="false"
                android:textColor="@color/second_main_color"
                android:textColorHint="@color/second_main_color"
                android:backgroundTint="@color/second_main_color"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/full_name_with_double_dot"
                android:textAllCaps="false"
                android:textColor="@color/second_main_color"
                android:textColorHint="@color/second_main_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/full_name"
                android:textAllCaps="false"
                android:textColor="@color/second_main_color"
                android:textColorHint="@color/second_main_color"
                android:backgroundTint="@color/second_main_color"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/regionWithDoubleDot"
                android:textAllCaps="false"
                android:textColor="@color/second_main_color"
                android:textColorHint="@color/second_main_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/region"
                android:textAllCaps="false"
                android:textColor="@color/second_main_color"
                android:textColorHint="@color/second_main_color"
                android:backgroundTint="@color/second_main_color"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btnGoToTheNextPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:ems="11"
            android:background="@drawable/login_btn_bg"
            app:backgroundTint="@null"
            android:text="@string/go_to_the_next_part"
            android:textColor="@color/text_main_color"
            android:textAllCaps="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>