<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:layout_gravity="center"
    tools:context=".view.ViewInfoStationaryActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/roleAndUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:text=""
            android:hint="@string/role_username"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <Button
            android:id="@+id/btnChangeUserInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/poppinsmediumitalic"
            android:text="@string/change_user_info"
            android:textAllCaps="false"
            android:textColor="@color/second_main_color"
            android:textSize="16sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppinsmediumitalic"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:backgroundTint="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>